[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "default_font",
    "wav",
    "webgl2",
    "x11",
] }

# WASM 専用依存（web-sys / js-sys / wasm-bindgen）
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "AudioContext",
    "AudioContextState",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
] }

# ネイティブビルドでも wasm-bindgen は getrandom などが要求する場合がある
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
